--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <div id="app">
       <canvas id="canvas"></canvas>
+
+      <div id="toolbar">
+        <button id="generate">Generate</button>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
